--- a/index.html
+++ b/index.html
@@ -41,14 +41,13 @@
         }
     </script>
 
+
+
 <script>
 if ("serviceWorker" in navigator) {
-  window.addEventListener("load", () => {
-    navigator.serviceWorker
-      .register("./service-worker.js")
-      .then(() => console.log("Service Worker OK"))
-      .catch(err => console.error("SW error", err));
-  });
+  navigator.serviceWorker.register("service-worker.js", { scope: './' })
+    .then(reg => console.log("Service Worker registrado", reg))
+    .catch(err => console.error("Error SW:", err));
 }
 </script>
 
